This file documents the revision history for the Mod-Gearman-Worker-Go

1.5.2    Wed Sep  4 11:03:28 CEST 2024
          - add worker_name_in_result option
          - add check_gearman tool
          - add gearman_top tool

1.5.1    Thu Mar 21 17:43:21 CET 2024
          - update internal check_nsc_web to v0.7.2
          - minimum go version is now 1.22

1.5.0    Tue Mar 12 14:07:47 CET 2024
          - update dependencies
          - restructure code layout
          - switch testing framework

1.4.0    Wed Feb 28 12:58:19 CET 2024
          - improve command line parsing
          - update internal check_nsc_web to v0.6.3

1.3.9    Thu Feb 15 18:02:53 CET 2024
          - change default timeout return code to unknown (3)
          - fix commands using backslashes inside of double quotes

1.3.8    Mon Jan 29 08:33:36 CET 2024
          - update internal check_nsc_web to v0.6.2
          - unify return code to unknown if file was not found
          - take quotes into account when checking for shell characters

1.3.7    Fri Jul 14 13:07:32 CEST 2023
          - add usage for testcmd command
          - fix performance metrics for epn checks

1.3.6    Thu Jun 29 11:00:12 CEST 2023
          - fix crash when multiple internal check_nsc_web checks run in parallel

1.3.5    Tue Jun 27 16:26:12 CEST 2023
          - fix crash when using internal checks and prometheus metrics
          - improve output on configuraton errors

1.3.4    Mon Jun 26 15:47:45 CEST 2023
          - epn: improve timeout handling
          - add internal check_nsc_web handler
          - add internal check_dummy handler

1.3.3    Fri Apr 28 09:55:33 CEST 2023
          - parse shell args to execute more commands without shell
          - use internal negate if command starts with .../negate to skip that fork
          - epn: do not handle warnings as fatal errors

1.3.2    Thu Mar  2 16:21:22 CET 2023
          - improve restarting epn server