@@ -1,5 +1,8 @@
 This file documents the revision history for the Mod-Gearman-Worker-Go
 
+next:
+          - fix epn warnings perspective when using printf wrong
+
 1.5.2    Wed Sep  4 11:03:28 CEST 2024
           - add worker_name_in_result option
           - add check_gearman tool
